# alvium-polocalc

./: CMakeLists.txt  build.sh
alvium-sdk/api/dotnet/: VmbNET.1.1.0.nupkg
alvium-sdk/api/lib/cmake/vmb/: vmb-config-version.cmake
alvium-sdk/api/python/: vmbpy-1.1.0-py3-none-linux_aarch64.whl
alvium-sdk/cti/: VimbaGigETL.cti
build_exposure/: CMakeCache.txt  Makefile  alvium  cmake_install.cmake
build_faster_cpu/: CMakeCache.txt  Makefile  alvium  cmake_install.cmake
build_new_sd/: CMakeCache.txt  Makefile  alvium  cmake_install.cmake
build_roi/: CMakeCache.txt  Makefile  alvium  cmake_install.cmake
build_trigger/: CMakeCache.txt  Makefile  alvium  cmake_install.cmake
include/: Driver.h  Logger.h  Utils.h
src/: Driver.cpp  Logger.cpp  Utils.cpp  main.cpp
test/: calibration.py  photogrammetry.py  timing.py
